--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
 
   Coverage:
     name: Test Coverage
+    if: false
     runs-on: ubuntu-latest
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -57,7 +58,7 @@ jobs:
         pip install -r requirements.txt
     - name: Test with pytest
       run: |
-        python -m pytest --cov=./colony --cov-report xml
+        python -m pytest --cov=./torque --cov-report xml
     - name: Run coveralls
       env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALL_TOKEN }}
