Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,6 @@ steps:
   inputs:
     torqueEndpoint: 'Torgue'
     timeout: '20'
-    space: 'DBS'
-    blueprint: 'hello'
-    sandbox: 'helloworld'
+    space: 'Sample'
+    blueprint: '[Sample]Bitnami Nginx Helm Chart'
+    sandbox: 'Grrr'
